# olympus

./: README.md  pyproject.toml  run.sh
app/: main.py
app/static/css/: style.css
app/static/js/: player.js
app/templates/: base.html  index.html  tag.html
olympus/: main.py  tags.py
olympus/static/css/: style.css
olympus/static/data/: tags.json
olympus/static/js/: player.js
olympus/templates/: base.html  tag.html
tests/: test_app.py  test_tags.py
utils/: speech_to_text.py
