[tool.poetry]
name = "olympus"
version = "0.1.0"
description = "Zeus : Master of Olympus soundboard"
authors = ["Alexandre <allespag@student.42.fr>"]
readme = "README.md"

packages = [{ include = "olympus" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
pdbpp = "^0.10.3"
pydantic = "^2.7.1"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
